--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^3.4.23"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
         "apexcharts": "^3.48.0",
         "chart.js": "^4.4.2",
         "vue-chartjs": "^5.3.1"
